--- a/TournamentEditor/.gitignore
+++ b/TournamentEditor/.gitignore
@@ -31,3 +31,34 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore Tailwind CSS compiled output.
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+# Ignore node_modules
+/node_modules
+/yarn-error.log
+.yarn-integrity
+
+# Ignore environment variables
+.env
+.env.local
+.env.*.local
+
+# Ignore macOS files
+.DS_Store
+**/.DS_Store
+
+# Ignore IDE directories
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Ignore coverage reports
+/coverage/
+
+# Ignore Spring files
+/spring/*.pid
