--- a/TournamentEditor/config/database.yml
+++ b/TournamentEditor/config/database.yml
@@ -1,9 +1,5 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+# Application does not use a database - all work is done on the front end
+# Minimal database.yml to prevent ActiveRecord rake task errors
 default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -11,15 +7,12 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: ":memory:"
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: ":memory:"
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: ":memory:"
